--- a/BadNews/Views/News/Index.cshtml
+++ b/BadNews/Views/News/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BadNews.Models.News.IndexModel
 @using System.Web
-    <!-- Body -->
+<!-- Body -->
 
-    <main role="main" class="container">
-        <div class="row">
-            <div class="col-md-8 news-main">
+<main role="main" class="container">
+    <div class="row">
+        <div class="col-md-8 news-main">
             @foreach (var article in Model.PageArticles)
             {
                 string url = $"/news/fullarticle/{HttpUtility.UrlEncode(article.Id.ToString())}";
@@ -20,36 +20,58 @@
                 </div>
             }
 
-                <nav class="news-pagination">
-                    @{
-                        var newerUrl = !Model.IsFirst
-                            ? $"/news?pageIndex={HttpUtility.UrlEncode((Model.PageIndex - 1).ToString())}"
-                            : "";
-                        var olderUrl = !Model.IsLast
-                            ? $"/news?pageIndex={HttpUtility.UrlEncode((Model.PageIndex + 1).ToString())}"
-                            : "";
-                    }
-                    <!-- <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Новее</a> -->
-                    <a class="btn btn-outline-primary" href="@newerUrl">
-                        Новее
-                    </a>
-                    <!-- <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Старше</a> -->
-                    <a class="btn btn-outline-primary" href="@olderUrl">
-                        Старше
-                    </a>
-                </nav>
-            </div>
-
-            <aside class="col-md-4 news-sidebar">
-            </aside>
+            <nav class="news-pagination">
+                @{
+                    var newerUrl = !Model.IsFirst
+            ? $"/news?pageIndex={HttpUtility.UrlEncode((Model.PageIndex - 1).ToString())}"
+            : "";
+                    var olderUrl = !Model.IsLast
+                    ? $"/news?pageIndex={HttpUtility.UrlEncode((Model.PageIndex + 1).ToString())}"
+                    : "";
+                }
+                <!-- <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Новее</a> -->
+                <a class="btn btn-outline-primary" href="@newerUrl">
+                    Новее
+                </a>
+                <!-- <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Старше</a> -->
+                <a class="btn btn-outline-primary" href="@olderUrl">
+                    Старше
+                </a>
+            </nav>
         </div>
-    </main>
 
-    <footer class="news-footer">
-        <p>
-            <a href="#">Наверх</a>
-        </p>
-    </footer>
+        <aside class="col-md-4 news-sidebar">
+        </aside>
+    </div>
+</main>
+
+<footer class="news-footer">
+    <p>
+        <a href="#">Наверх</a>
+    </p>
+</footer>
 
 
-    <!--/ Body -->
+<!--/ Body -->
+@section Header
+{
+<div class="row mb-2">
+    @foreach (var article in Model.FeaturedArticles)
+    {
+    string url = $"/news/fullarticle/{HttpUtility.UrlEncode(article.Id.ToString())}";
+    <div class="col-md-6">
+        <div
+            class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+                <h3 class="mb-0">@article.Header</h3>
+                <div class="mb-1 text-muted">@article.Date.ToString("d MMM yyyy", ViewBag.Culture)</div>
+                <p class="card-text mb-auto">
+                    @article.Teaser
+                </p>
+                <a href='@url'>Читать полностью</a>
+            </div>
+        </div>
+    </div>
+    }
+</div>
+}
