--- a/BadNews/Views/News/Index.cshtml
+++ b/BadNews/Views/News/Index.cshtml
@@ -25,7 +25,7 @@
                 }
                 else
                 {
-                    <a class="btn btn-outline-primary" asp-controller="News" asp-route-pageIndex="@(Model.PageIndex - 1)">
+                    <a class="btn btn-outline-primary" asp-controller="News" asp-route-year="@Model.Year" asp-route-pageIndex="@(Model.PageIndex - 1)">
                         Новее
                     </a>
                 }
@@ -35,7 +35,7 @@
                 }
                 else
                 {
-                    <a class="btn btn-outline-primary" asp-controller="News" asp-route-pageIndex="@(Model.PageIndex + 1)">
+                    <a class="btn btn-outline-primary" asp-controller="News" asp-route-year="@Model.Year" asp-route-pageIndex="@(Model.PageIndex + 1)">
                         Старше
                     </a>
                 }
@@ -43,6 +43,7 @@
         </div>
 
         <aside class="col-md-4 news-sidebar">
+            <vc:archive-links></vc:archive-links>
         </aside>
     </div>
 </main>
