--- a/BadNews/Views/Shared/_Layout.cshtml
+++ b/BadNews/Views/Shared/_Layout.cshtml
@@ -1,20 +1,26 @@
+@using BadNews.Elevation
+
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Bad News</title>
     <meta name="theme-color" content="#563d7c" />
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900"
-          rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet" />
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/site.css" />
 </head>
+
 <body>
     <div class="container">
         <header class="news-header">
             <a class="news-header-logo text-dark" href="/">Bad News</a>
+            @if (ViewContext.IsElevated())
+            {
+                <span class="text-primary ml-2">есть привилегии</span>
+            }
         </header>
 
         <div class="nav-scroller py-1 mb-2"></div>
@@ -31,4 +37,5 @@
     <script src="/js/site.js"></script>
     <partial name="_ValidationScriptsPartial" />
 </body>
+
 </html>
